--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -118,3 +118,8 @@ body {
 .card-orange {
     border-left: 5px solid orange;
 }
+
+.No-appointment-text {
+    font-size: 27px;
+    margin: 3% 0 0 40%;
+}
